modified the ports for deployment

--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -9,8 +9,8 @@
     <nav>
         <a href="register.html">Register</a>
         <a href="login.html">Login</a>
-        <a href="admin.html">Admin</a>
-        <a href="quiz.html">Take Quiz</a>
+        <!-- <a href="admin.html">Admin</a>
+        <a href="quiz.html">Take Quiz</a> -->
         <a href="results.html">Results</a>
     </nav>
     <div class="container">
