--- a/FRONTEND/login.html
+++ b/FRONTEND/login.html
@@ -23,7 +23,7 @@
             const password = document.getElementById('password').value;
     
             try {
-                const response = await fetch('http://backend-container:5000/api/auth/login', {
+                const response = await fetch('http://localhost:3000/api/auth/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
