--- a/FRONTEND/quiz.html
+++ b/FRONTEND/quiz.html
@@ -19,7 +19,7 @@
             }
 
             try {
-                const response = await fetch('http://backend-container:5000/api/quizzes', {
+                const response = await fetch('http://localhost:3000/api/quizzes', {
                     headers: {
                         'Authorization': `${token}`
                     }
