--- a/FRONTEND/quiz1.html
+++ b/FRONTEND/quiz1.html
@@ -22,7 +22,7 @@
             const quizId = params.get('quizId');
 
             try {
-                const response = await fetch(`http://backend-container:5000/api/quizzes/${quizId}`, {
+                const response = await fetch(`http://localhost:3000/api/quizzes/${quizId}`, {
                     headers: {
                         'Authorization': `${token}`
                     }
@@ -70,7 +70,7 @@
             }
 
             const token = localStorage.getItem('token');
-            const response = await fetch(`http://backend-container:5000/api/quizzes/${quizId}/submit`, {
+            const response = await fetch(`http://localhost:3000/api/quizzes/${quizId}/submit`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
