--- a/FRONTEND/admin.html
+++ b/FRONTEND/admin.html
@@ -93,7 +93,7 @@
             }));
 
             try {
-                const response = await fetch('http://localhost:3000/api/admin/quizzes', {
+                const response = await fetch('http://3.110.103.223:3000/api/admin/quizzes', {
                     method: 'POST',
                     headers: {
                         'Authorization': token,
@@ -120,7 +120,7 @@
             const token = localStorage.getItem('token');
 
             try {
-                const response = await fetch('http://localhost:3000/api/quizzes', {
+                const response = await fetch('http://3.110.103.223:3000/api/quizzes', {
                     headers: {
                         'Authorization': token,
                     },
@@ -151,7 +151,7 @@
             const token = localStorage.getItem('token');
 
             try {
-                const response = await fetch(`http://localhost:3000/api/admin/quizzes/${quizId}`, {
+                const response = await fetch(`http://3.110.103.223:3000/api/admin/quizzes/${quizId}`, {
                     method: 'DELETE',
                     headers: {
                         'Authorization': token,
